--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 03:05:03 2018</p>
+         Last Run: Fri Nov  2 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -34,35 +34,35 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>6</td>
-                        <td>83</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>64</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>4</td>
                         <td>2</td>
                         <td>4</td>
-                        <td>68</td>
+                        <td>67</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>59</td>
+                        <td>WSW</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>6</td>
-                        <td>4</td>
+                        <td>7</td>
+                        <td>5</td>
                         <td>3</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>59</td>
+                        <td>57</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-3",
                  "2",
-                 "4"
+                 "5"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "0",
                  "4",
-                 "6"
+                 "7"
                ]
              }
            ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
-                 "68",
-                 "56"
+                 "82",
+                 "67",
+                 "55"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "75",
                  "64",
-                 "59",
-                 "59"
+                 "57"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 03:05:03 2018</p>
+         Last Run: Fri Nov  2 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,36 +248,36 @@
                         <td>Overcast</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>16</td>
-                        <td>50</td>
+                        <td>9</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>NW</td>
-                        <td>87</td>
+                        <td>WNW</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>8</td>
-                        <td>6</td>
-                        <td>24</td>
-                        <td>51</td>
+                        <td>9</td>
+                        <td>9</td>
+                        <td>20</td>
+                        <td>47</td>
                         <td>1</td>
-                        <td>14</td>
-                        <td>NNW</td>
-                        <td>74</td>
+                        <td>11</td>
+                        <td>NW</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>8</td>
-                        <td>6</td>
-                        <td>34</td>
-                        <td>49</td>
+                        <td>9</td>
+                        <td>9</td>
+                        <td>36</td>
+                        <td>44</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>10</td>
                         <td>NW</td>
-                        <td>68</td>
+                        <td>74</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,8 +305,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "6",
-                 "6",
-                 "6"
+                 "9",
+                 "9"
                ]
              },
              {
@@ -317,8 +317,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "8",
-                 "8",
-                 "8"
+                 "9",
+                 "9"
                ]
              }
            ]
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "16",
-                 "24",
-                 "34"
+                 "9",
+                 "20",
+                 "36"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
                  "51",
-                 "49"
+                 "47",
+                 "44"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "87",
-                 "74",
-                 "68"
+                 "89",
+                 "79",
+                 "74"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 03:05:03 2018</p>
+         Last Run: Fri Nov  2 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -462,24 +462,24 @@
                         <td>09:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-4</td>
-                        <td>-7</td>
-                        <td>40</td>
-                        <td>80</td>
+                        <td>-8</td>
+                        <td>41</td>
+                        <td>78</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>NNW</td>
+                        <td>10</td>
+                        <td>N</td>
                         <td>92</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-4</td>
-                        <td>-7</td>
-                        <td>39</td>
-                        <td>81</td>
+                        <td>-8</td>
+                        <td>40</td>
+                        <td>79</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>NNW</td>
+                        <td>10</td>
+                        <td>N</td>
                         <td>92</td>
                      </tr>
                      <tr>
@@ -487,11 +487,11 @@
                         <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>30</td>
+                        <td>40</td>
                         <td>82</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NNW</td>
+                        <td>N</td>
                         <td>92</td>
                      </tr>
                   </tbody>
@@ -519,8 +519,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-7",
-                 "-7",
+                 "-8",
+                 "-8",
                  "-9"
                ]
              },
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "41",
                  "40",
-                 "39",
-                 "30"
+                 "40"
                ]
              },
              {
@@ -601,8 +601,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "81",
+                 "78",
+                 "79",
                  "82"
                ]
              },
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 03:05:03 2018</p>
+         Last Run: Fri Nov  2 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -676,38 +676,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-7</td>
-                        <td>-10</td>
-                        <td>24</td>
-                        <td>75</td>
+                        <td>-6</td>
+                        <td>-9</td>
+                        <td>23</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>ENE</td>
-                        <td>47</td>
+                        <td>W</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-7</td>
-                        <td>-10</td>
+                        <td>-6</td>
+                        <td>-9</td>
                         <td>23</td>
-                        <td>76</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>ENE</td>
-                        <td>48</td>
+                        <td>WNW</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-7</td>
                         <td>-10</td>
-                        <td>24</td>
-                        <td>76</td>
+                        <td>22</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>ENE</td>
-                        <td>49</td>
+                        <td>NW</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,8 +734,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-10",
-                 "-10",
+                 "-9",
+                 "-9",
                  "-10"
                ]
              },
@@ -746,8 +746,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-7",
-                 "-7",
+                 "-6",
+                 "-6",
                  "-7"
                ]
              }
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
                  "23",
-                 "24"
+                 "23",
+                 "22"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "75",
-                 "76",
-                 "76"
+                 "72",
+                 "73",
+                 "74"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "47",
-                 "48",
-                 "49"
+                 "41",
+                 "41",
+                 "41"
                ]
              }
            ]
