--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 04:05:02 2018</p>
+         Last Run: Fri Nov  2 05:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>6</td>
-                        <td>82</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -46,11 +46,11 @@
                         <td>4</td>
                         <td>2</td>
                         <td>4</td>
-                        <td>67</td>
+                        <td>66</td>
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>64</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -60,9 +60,9 @@
                         <td>3</td>
                         <td>55</td>
                         <td>1</td>
-                        <td>10</td>
-                        <td>SW</td>
-                        <td>57</td>
+                        <td>11</td>
+                        <td>WSW</td>
+                        <td>56</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
-                 "67",
+                 "81",
+                 "66",
                  "55"
                ]
              },
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "75",
-                 "64",
-                 "57"
+                 "63",
+                 "56"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 04:05:02 2018</p>
+         Last Run: Fri Nov  2 05:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>Overcast</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>9</td>
+                        <td>8</td>
                         <td>51</td>
                         <td>1</td>
                         <td>11</td>
@@ -272,10 +272,10 @@
                         <td>Chance of Rain</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>44</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NW</td>
                         <td>74</td>
                      </tr>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "9",
+                 "8",
                  "20",
-                 "36"
+                 "35"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 04:05:02 2018</p>
+         Last Run: Fri Nov  2 05:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -476,7 +476,7 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>40</td>
-                        <td>79</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
@@ -602,7 +602,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "78",
-                 "79",
+                 "80",
                  "82"
                ]
              },
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 04:05:02 2018</p>
+         Last Run: Fri Nov  2 05:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,7 +679,7 @@
                         <td>-6</td>
                         <td>-9</td>
                         <td>23</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
@@ -816,7 +816,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
+                 "73",
                  "73",
                  "74"
                ]
