--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 05:05:03 2018</p>
+         Last Run: Fri Nov  2 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -34,22 +34,22 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>6</td>
-                        <td>81</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>75</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
                         <td>4</td>
                         <td>2</td>
-                        <td>4</td>
-                        <td>66</td>
+                        <td>5</td>
+                        <td>67</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>63</td>
                      </tr>
                      <tr>
@@ -60,8 +60,8 @@
                         <td>3</td>
                         <td>55</td>
                         <td>1</td>
-                        <td>11</td>
-                        <td>WSW</td>
+                        <td>10</td>
+                        <td>SW</td>
                         <td>56</td>
                      </tr>
                   </tbody>
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
-                 "4",
+                 "5",
                  "3"
                ]
              },
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "66",
+                 "83",
+                 "67",
                  "55"
                ]
              },
@@ -182,7 +182,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
+                 "73",
                  "63",
                  "56"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 05:05:03 2018</p>
+         Last Run: Fri Nov  2 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,20 +248,20 @@
                         <td>Overcast</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>8</td>
-                        <td>51</td>
+                        <td>7</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>89</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>20</td>
-                        <td>47</td>
+                        <td>9</td>
+                        <td>46</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NW</td>
@@ -269,13 +269,13 @@
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>35</td>
+                        <td>21</td>
                         <td>44</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NW</td>
                         <td>74</td>
                      </tr>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "8",
-                 "20",
-                 "35"
+                 "7",
+                 "9",
+                 "21"
                ]
              },
              {
@@ -386,8 +386,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "47",
+                 "50",
+                 "46",
                  "44"
                ]
              },
@@ -397,7 +397,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "89",
+                 "88",
                  "79",
                  "74"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 05:05:03 2018</p>
+         Last Run: Fri Nov  2 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -476,7 +476,7 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>40</td>
-                        <td>80</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
@@ -488,7 +488,7 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>40</td>
-                        <td>82</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
@@ -602,8 +602,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "78",
-                 "80",
-                 "82"
+                 "79",
+                 "81"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 05:05:03 2018</p>
+         Last Run: Fri Nov  2 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,10 +679,10 @@
                         <td>-6</td>
                         <td>-9</td>
                         <td>23</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>41</td>
                      </tr>
                      <tr>
@@ -691,10 +691,10 @@
                         <td>-6</td>
                         <td>-9</td>
                         <td>23</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>WNW</td>
+                        <td>NW</td>
                         <td>41</td>
                      </tr>
                      <tr>
@@ -703,7 +703,7 @@
                         <td>-7</td>
                         <td>-10</td>
                         <td>22</td>
-                        <td>74</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NW</td>
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
-                 "73",
-                 "74"
+                 "72",
+                 "72",
+                 "73"
                ]
              },
              {
